@@ -1,0 +1,8 @@
+PACKAGE=qpe-gaim
+VER=0.1.0
+
+TMPDIR=tmp
+
+ARCH=arm
+RM=rm
+TAR=tar
